@@ -73,3 +73,4 @@
 	- command-line API driven
 	- create/modify/delete a user, domain, script, database, etc..
 
+ - test openads upgrade
