@@ -1094,12 +1094,12 @@ return 1 if (&master_admin() ||
 }
 
 # post_http_connection(&hostname, port, page, &cgi-params, &out, &err,
-#		       &moreheaders, &returnheaders)
+#		       &moreheaders, &returnheaders, &returnheaders-array)
 # Makes an HTTP post to some URL, sending the given CGI parameters as data.
 sub post_http_connection
 {
 local ($host, $port, $page, $params, $out, $err, $headers,
-       $returnheaders) = @_;
+       $returnheaders, $returnheaders_array) = @_;
 
 # Find the Virtualmin domain for the hostname, so we can get the IP
 local ($d) = &get_domain_by("dom", $host);
@@ -1123,8 +1123,8 @@ if (!ref($h)) {
 &write_http_connection($h, "Content-type: application/x-www-form-urlencoded\r\n");
 &write_http_connection($h, "Content-length: ".length($params)."\r\n");
 if ($headers) {
-	foreach my $hd (keys %headers) {
-		&write_http_connection($h, "$hd: $headers{$hd}\r\n");
+	foreach my $hd (keys %$headers) {
+		&write_http_connection($h, "$hd: $headers->{$hd}\r\n");
 		}
 	}
 &write_http_connection($h, "\r\n");
@@ -1132,9 +1132,13 @@ if ($headers) {
 
 # Read back the results
 $post_http_headers = undef;
+$post_http_headers_array = undef;
 &complete_http_download($h, $out, $err, \&capture_http_headers);
 if ($returnheaders && $post_http_headers) {
 	%$returnheaders = %$post_http_headers;
+	}
+if ($returnheaders_array && $post_http_headers_array) {
+	@$returnheaders_array = @$post_http_headers_array;
 	}
 }
 
@@ -1142,6 +1146,7 @@ sub capture_http_headers
 {
 if ($_[0] == 4) {
 	$post_http_headers = \%header;
+	$post_http_headers_array = \@headers;
 	}
 }
 
