@@ -757,3 +757,4 @@ Added an option to the Edit Mailbox page to disable spam filtering for a user. A
 Updated the phpMyAdmin script installer to 2.11.1.2, and Drupal to 5.3 and 4.7.8.
 Added a warning about NSCD to the configuration check page.
 Logging is now enabled when setting up clamd, and the socket directory created if needed.
+Upgraded the OpenAds script installer to 2.4.0, which uses a completely different installation wizard.
